@@ -119,6 +119,9 @@ BUG FIXES
     o	recordPlot() and replayPlot() failed to duplicate the display
 	list, so further plotting altered the saved or replayed object.
 
+    o	Assignments of the form adf[i,j] <- value now accept a
+	data-frame value as well as a list value.
+
 
 
 		CHANGES IN R VERSION 1.9.0
